# SDL_cubeRenderer

./: CMakeLists.txt  README.md  main.c
src/main/: main.c  mesh.c  mesh.h  vector.c  vector.h  window.c  window.h
